// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseInput addon should render properly 1`] = `
<div>
  <div>
    <span
      class="rc-input-group-wrapper"
    >
      <span
        class="rc-input-wrapper rc-input-group"
      >
        <span
          class="rc-input-group-addon"
        >
          <span>
            Addon Before
          </span>
        </span>
        <div
          class="rc-input"
        >
          <div
            class="rc-input-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="rc-input-handler rc-input-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                class="rc-input-handler-up-inner"
                unselectable="on"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="rc-input-handler rc-input-handler-down"
              role="button"
              unselectable="on"
            >
              <span
                class="rc-input-handler-down-inner"
                unselectable="on"
              />
            </span>
          </div>
          <div
            class="rc-input-input-wrap"
          >
            <input
              autocomplete="off"
              class="rc-input-input"
              role="spinbutton"
              step="1"
              value=""
            />
          </div>
        </div>
      </span>
    </span>
    <br />
    <br />
    <span
      class="rc-input-group-wrapper"
    >
      <span
        class="rc-input-wrapper rc-input-group"
      >
        <div
          class="rc-input"
        >
          <div
            class="rc-input-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="rc-input-handler rc-input-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                class="rc-input-handler-up-inner"
                unselectable="on"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="rc-input-handler rc-input-handler-down"
              role="button"
              unselectable="on"
            >
              <span
                class="rc-input-handler-down-inner"
                unselectable="on"
              />
            </span>
          </div>
          <div
            class="rc-input-input-wrap"
          >
            <input
              autocomplete="off"
              class="rc-input-input"
              role="spinbutton"
              step="1"
              value=""
            />
          </div>
        </div>
        <span
          class="rc-input-group-addon"
        >
          <span>
            Addon After
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`baseInput prefix should render properly 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <span
      class="rc-input-prefix"
    >
      <span>
        Prefix
      </span>
    </span>
    <div
      class="rc-input"
    >
      <div
        class="rc-input-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="rc-input-handler rc-input-handler-up"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-handler-up-inner"
            unselectable="on"
          />
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="rc-input-handler rc-input-handler-down"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-handler-down-inner"
            unselectable="on"
          />
        </span>
      </div>
      <div
        class="rc-input-input-wrap"
      >
        <input
          autocomplete="off"
          class="rc-input-input"
          role="spinbutton"
          step="1"
          value=""
        />
      </div>
    </div>
  </span>
</div>
`;
